# drone_simulation

./: CMakeLists.txt  README.md  package.xml
launch/: drone_control.py  drone_master.py  full.launch.py  gazebo.launch.py  obstacle_avoidance.py  return_home.py
worlds/: drone_world.sdf
