<?xml version="1.0"?>
<package format="3">
  <name>drone_simulation</name>
  <version>0.1.0</version>
  <description>Drone Simulation</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>robot_state_publisher</depend>
  <depend>drone_description</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
